[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "James Addison", email = "james@reciperadar.com"},
]
classifiers=[
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
description = "Python library for the Mojeek API"
license = { text = "AGPL-3.0-or-later" }
name = "pymojeek"
readme = { content-type = "text/markdown", file = "README.md" }
requires-python = ">= 3.7"
urls = { Homepage = "https://pypi.org/project/pymojeek/", Source = "https://github.com/openculinary/pymojeek.git/" }
version = "0.1.2"
